--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,6 +5,9 @@
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
+    "networkTimeout": {
+        "request": 10000 //多长时间算超时(单位毫秒)
+    },
     /* 5+App特有相关 */
     "app-plus" : {
         "usingComponents" : true,
